--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -54,6 +54,7 @@ stages:
       - PY_VERSION: *test_python_versions
   after_script:
     - export GITHUB_PR="${CI_COMMIT_BRANCH#__CSCSCI__pr}"
+    # If we hit a rate limit in the GitHub API, consider using: -H \"Authorization: token $GITHUB_TOKEN\"
     - echo "DRAFT_COMMIT=$(curl https://api.github.com/repos/gridtools/gt4py/pulls/${GITHUB_PR} 2>/dev/null | jq -r '.draft')" > shared.env
   artifacts:
     reports:
