--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -54,10 +54,9 @@ stages:
       - PY_VERSION: *test_python_versions
   after_script:
     - export GITHUB_PR="${CI_COMMIT_BRANCH#__CSCSCI__pr}"
-    - echo "GITHUB_PR=${GITHUB_PR}"
-    - export "DRAFT_COMMIT=$(curl -H \"Authorization: token $GITHUB_TOKEN\" https://api.github.com/repos/gridtools/gt4py/pulls/${GITHUB_PR} 2>/dev/null | jq -r '.draft')"
-    - echo "DRAFT_COMMIT=${DRAFT_COMMIT}"
-    - echo "DRAFT_COMMIT=${DRAFT_COMMIT}" >> build.env
+    - echo "GITHUB_PR=${GITHUB_PR}" >> build.env
+    - echo "DRAFT_COMMIT=$(curl -H \"Authorization: token ${GITHUB_TOKEN}\" https://api.github.com/repos/gridtools/gt4py/pulls/${GITHUB_PR} 2>/dev/null | jq -r '.draft')" >> build.env
+    - cat build.env
 
 .build_extra_cuda:
   variables:
