Fix it properly by removing the dev- groups

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ requires = ['cython>=3.0.0', 'setuptools>=70.0.0', 'versioningit>=3.1.1', 'wheel
 # -- Dependency groups --
 [dependency-groups]
 build = ['cython>=3.0.0', 'pip>=22.1.1', 'setuptools>=70.0.0', 'wheel>=0.33.6']
+dace-cartesian = ['dace>=1.0.2,<2']
+dace-next = [
+  'dace>=1.0.0'  # refined in [tool.uv.sources]
+]
 dev = [
   {include-group = 'build'},
   {include-group = 'docs'},
@@ -14,14 +18,6 @@ dev = [
   {include-group = 'lint'},
   {include-group = 'test'},
   {include-group = 'typing'}
-]
-dev-cartesian = [
-  'dace>=1.0.2,<2',
-  {include-group = 'dev'}
-]
-dev-next = [
-  'dace>=1.0.0',   # refined in [tool.uv.sources]
-  {include-group = 'dev'}
 ]
 docs = [
   'esbonio>=0.16.0',
@@ -416,8 +412,8 @@ conflicts = [
     {extra = 'rocm6_0'}
   ],
   [
-    {group = 'dev-cartesian'},
-    {group = 'dev-next'}
+    {group = 'dace-cartesian'},
+    {group = 'dace-next'}
   ]
 ]
 default-groups = ["dev"]
@@ -431,7 +427,7 @@ url = 'https://test.pypi.org/simple'
 [tool.uv.sources]
 atlas4py = {index = "test.pypi"}
 dace = [
-  {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_07_03", group = "dev-next"}
+  {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_07_03", group = "dace-next"}
 ]
 
 # -- versioningit --
