--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,13 +14,18 @@ repos:
       - id: pretty-format-yaml
         args: [--autofix, --preserve-quotes, --indent, "2", --offset, "2"]
 
-  # We don't want to update this hook since newer versions of prettier are broken for pre-commit.
-  # TODO(egparedes): find a lightweight alternative to prettier
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
+  - repo: https://github.com/hukkin/mdformat
+    rev: 0.7.22
     hooks:
-      - id: prettier
-        types_or: [markdown, json]
+      - id: mdformat
+        additional_dependencies:
+          - mdformat-frontmatter
+          - mdformat-gfm
+          - mdformat-gfm-alerts
+          - mdformat-myst
+          - mdformat-ruff
+          - mdformat-tables
+        args: [--number]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
