--- a/pyproject.toml
+++ b/pyproject.toml
@@ -308,26 +308,50 @@ respect-gitignore = true
 show-fixes = true
 # show-source = true
 target-version = 'py310'
+typing-modules = ['gt4py.eve.extended_typing']
 
 [tool.ruff.format]
 docstring-code-format = true
 
 [tool.ruff.lint]
-# # Rules sets:
-# E: pycodestyle
-# F: Pyflakes
-# I: isort
-# B: flake8-bugbear
+# -- Rules set to be considered --
 # A: flake8-builtins
-# T10: flake8-debugger
+# B: flake8-bugbear
+# C4: flake8-comprehensions
+# CPY: flake8-copyright
+# D: pydocstyle
+# DOC: pydoclint
+# E: pycodestyle
 # ERA: eradicate
+# F: Pyflakes
+# FA100: future-rewritable-type-annotation
+# FBT: flake8-boolean-trap
+# FLY: flynt
+# I: isort
+# ICN: flake8-import-conventions
+# ISC: flake8-implicit-str-concat
+# N: pep8-naming
 # NPY: NumPy-specific rules
+# PERF: Perflint
+# PGH: pygrep-hooks
+# PTH: flake8-use-pathlib
+# Q: flake8-quotes
 # RUF: Ruff-specific rules
+# SIM: flake8-simplify
+# T10: flake8-debugger
+# TD: flake8-todos
+# UP: pyupgrade
+# YTT: flake8-2020
+exclude = ['docs/**', "examples/**", "tests/**"]
+explicit-preview-rules = true
+extend-select = ["F822"]
 ignore = [
   'E501',  # [line-too-long]
-  'B905'  # [zip-without-explicit-strict]  # TODO(egparedes): Reevaluate this rule
+  'B905',  # [zip-without-explicit-strict]  # TODO(egparedes): remove when possible
+  'TD003'  # [missing-todo-link]
 ]
-select = ['E', 'F', 'I', 'B', 'A', 'T10', 'ERA', 'NPY', 'RUF']
+preview = true  # use only with explicit-preview-rules=true
+select = ['A', 'B', 'CPY', 'E', 'ERA', 'F', 'FA100', 'I', 'ISC', 'NPY', 'Q', 'RUF', 'T10', 'YTT']
 typing-modules = ['gt4py.eve.extended_typing']
 unfixable = []
 
