--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,7 +139,7 @@ next = ['gt4py[jax,standard,testing]']
 rocm4_3 = ['cupy-rocm-4-3>=13.3.0']
 rocm5_0 = ['cupy-rocm-5-0>=13.3.0']
 rocm6_0 = ['cupy>=13.4.1']
-standard = ['clang-format>=9.0', 'scipy>=1.14.1']
+standard = ['scipy>=1.14.1']
 testing = ['hypothesis>=6.93', 'pytest>=7.0']
 
 [project.scripts]
