exclude cartesian mac os

--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -36,6 +36,9 @@ jobs:
         gt4py-module: ["cartesian", "eve", "next", "storage"]
         os: ["ubuntu-latest", "macos-latest"]
         python-version: ${{ fromJson(needs.get-python-versions.outputs.python-versions) }}
+        exclude:
+          - os: macos-latest
+            gt4py-module: cartesian
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
@@ -48,15 +51,6 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
           python-version: ${{ matrix.python-version }}
-
-      - name: Install clang with OpenMP for macos
-        if: ${{ matrix.os == 'macos-latest' }}
-        run: |
-          brew install llvm libomp
-          echo 'export PATH="/usr/local/opt/llvm/bin:$PATH"' >> $GITHUB_ENV
-          echo 'export LDFLAGS="-L/usr/local/opt/llvm/lib"' >> $GITHUB_ENV
-          echo 'export CPPFLAGS="-I/usr/local/opt/llvm/include"' >> $GITHUB_ENV
-          echo 'export OPENMP_LDFLAGS="-lomp -L/usr/local/opt/libomp/lib"' >> $GITHUB_ENV
 
       - name: Run CPU tests for '${{ matrix.gt4py-module }}' with '${{ matrix.dependencies-strategy }}' resolution strategy
         env:
