--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -66,7 +66,7 @@ jobs:
         # Force a specific compiler for setuptools/distutils (used in gt4py.cartesian)
           CXX: g++
           CC: gcc
-        run: uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu' -m requires_dace
+        run: uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu'
 
       - name: Notify slack
         if: ${{ failure() && (github.event_name == 'schedule') }}
