--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -52,15 +52,12 @@ jobs:
           cache-dependency-glob: "uv.lock"
           python-version: ${{ matrix.python-version }}
 
-      - name: Install clang with OpenMP for macos
+      - name: Install gcc with OpenMP for macos
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
-          brew install libomp
-          OPENMP_ROOT=$(brew --prefix libomp)
-          echo "export CMAKE_PREFIX_PATH=${OPENMP_ROOT}/include" >> $GITHUB_ENV
-          echo 'export CFLAGS="-Xclang -fopenmp"' >> $GITHUB_ENV
-          echo 'export CPPFLAGS="-Xclang -fopenmp"' >> $GITHUB_ENV
-          tail -4 $GITHUB_ENV
+          brew install gcc-15 libomp
+          echo "alias gcc=gcc-15" >> $GITHUB_ENV
+          echo "alias g++=g++-15" >> $GITHUB_ENV
 
       - name: Run CPU tests for '${{ matrix.gt4py-module }}' with '${{ matrix.dependencies-strategy }}' resolution strategy
         env:
@@ -68,7 +65,7 @@ jobs:
         # Force a specific compiler for setuptools/distutils (used in gt4py.cartesian)
           CXX: g++
           CC: gcc
-        run: uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu'
+        run: uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu' -t 'dace'
 
       - name: Notify slack
         if: ${{ failure() && (github.event_name == 'schedule') }}
