--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -33,8 +33,8 @@ jobs:
         # between the different compatible versions for a given package requirement
         # [arg: --resolution, env: UV_RESOLUTION=]
         dependencies-strategy: ["lowest-direct", "highest"]
-        gt4py-module: ["cartesian", "eve", "next", "storage"]
-        os: ["ubuntu-latest", "macos-latest"]
+        gt4py-module: ["next"]
+        os: ["macos-latest"]
         python-version: ${{ fromJson(needs.get-python-versions.outputs.python-versions) }}
         exclude:
           - os: macos-latest
@@ -64,7 +64,7 @@ jobs:
         # Force a specific compiler for setuptools/distutils (used in gt4py.cartesian)
           CXX: g++
           CC: gcc
-        run: uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu'
+        run: uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu' -t 'dace'
 
       - name: Notify slack
         if: ${{ failure() && (github.event_name == 'schedule') }}
