--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -34,7 +34,8 @@ jobs:
         # [arg: --resolution, env: UV_RESOLUTION=]
         dependencies-strategy: ["lowest-direct", "highest"]
         gt4py-module: ["next"]
-        os: ["macos-latest"]
+        # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
+        os: ["macos-15"]
         python-version: ${{ fromJson(needs.get-python-versions.outputs.python-versions) }}
         exclude:
           - os: macos-latest
@@ -53,7 +54,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install OpenMP for macos
-        if: ${{ matrix.os == 'macos-latest' }}
+        # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
+        if: ${{ matrix.os == 'macos-15' }}
         run: |
           brew install libomp
           echo "CMAKE_PREFIX_PATH=$(brew --prefix libomp)" >> $GITHUB_ENV
