--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -35,10 +35,11 @@ jobs:
         dependencies-strategy: ["lowest-direct", "highest"]
         gt4py-module: ["next"]
         # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
+        #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
         os: ["macos-15"]
         python-version: ${{ fromJson(needs.get-python-versions.outputs.python-versions) }}
         exclude:
-          - os: macos-latest
+          - os: macos-15
             gt4py-module: cartesian
       fail-fast: false
 
@@ -55,6 +56,7 @@ jobs:
 
       - name: Install OpenMP for macos
         # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
+        #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
         if: ${{ matrix.os == 'macos-15' }}
         run: |
           brew install libomp
@@ -66,7 +68,9 @@ jobs:
         # Force a specific compiler for setuptools/distutils (used in gt4py.cartesian)
           CXX: g++
           CC: gcc
-        run: uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu' -t 'dace'
+        run: |
+          rm -rf .gt4py_cache .dacecache
+          uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu' -t 'dace'
 
       - name: Notify slack
         if: ${{ failure() && (github.event_name == 'schedule') }}
