--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -55,6 +55,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install OpenMP for macos
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
         # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
         #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
         if: ${{ matrix.os == 'macos-15' }}
