--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -54,12 +54,13 @@ jobs:
           cache-dependency-glob: "uv.lock"
           python-version: ${{ matrix.python-version }}
 
-      - name: Install OpenMP for macos
+      - name: Install lastest-stable xcode version for macos
+        if: ${{ matrix.os == 'macos-15' }}
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
-        # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
-        #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
+          xcode-version: latest-stable  
+
+      - name: Install OpenMP for macos
         if: ${{ matrix.os == 'macos-15' }}
         run: |
           xcode-select -p
