--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -33,10 +33,10 @@ jobs:
         # between the different compatible versions for a given package requirement
         # [arg: --resolution, env: UV_RESOLUTION=]
         dependencies-strategy: ["lowest-direct", "highest"]
-        gt4py-module: ["next"]
+        gt4py-module: ["cartesian", "eve", "next", "storage"]
         # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
         #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
-        os: ["macos-15"]
+        os: ["ubuntu-latest", "macos-15"]
         python-version: ${{ fromJson(needs.get-python-versions.outputs.python-versions) }}
         exclude:
           - os: macos-15
@@ -73,9 +73,7 @@ jobs:
         # Force a specific compiler for setuptools/distutils (used in gt4py.cartesian)
           CXX: g++
           CC: gcc
-        run: |
-          rm -rf .gt4py_cache .dacecache
-          uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu' -t 'dace'
+        run: uv run --script noxfile.py -s 'test_${{ matrix.gt4py-module }}-${{ matrix.python-version }}' -t 'cpu'
 
       - name: Notify slack
         if: ${{ failure() && (github.event_name == 'schedule') }}
