--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ fromJson(needs.get-python-versions.outputs.python-versions) }}
+          python-version: ${{ fromJSON(needs.get-python-versions.outputs.python-versions) }}
 
       - name: Install pypa/build
         run: |
