--- a/.github/workflows/test-components.yml
+++ b/.github/workflows/test-components.yml
@@ -41,10 +41,10 @@ jobs:
         run: |
           if [ "${{ github.event_name }}" == "pull_request" ]; then
             # Exclude test sessions not affected by the PR changes
-            ./scripts-cli.py github-ci matrix \
+            ./scripts-cli.py github-ci matrix-exclude \
               --config nox-sessions-config.yml \
               --base "origin/${{ github.base_ref }}" \
-              --output gh-test-sessions.json \
+              --output gh-exclude-test-sessions.json \
               --verbose
           else
             # Run all sessions without any exclusions
