--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -52,20 +52,21 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install gcc for macos
-        if: ${{ matrix.os == 'macos-15' && matrix.gt4py-module == 'cartesian' }}
+        if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module == 'cartesian') }}
         run: |
           brew install gcc@14
-          echo "CC=$(brew --prefix gcc)/bin/gcc-14" >> $GITHUB_ENV
-          echo "CXX=$(brew --prefix gcc)/bin/g++-14" >> $GITHUB_ENV
+          gcc-14 --version
+          echo "CC=gcc-14" >> $GITHUB_ENV
+          echo "CXX=g++-14" >> $GITHUB_ENV
 
       - name: Install latest-stable xcode for macos
-        if: ${{ matrix.os == 'macos-15' && matrix.gt4py-module != 'cartesian' }}
+        if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module != 'cartesian') }}
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest-stable
 
       - name: Install libomp for macos
-        if: ${{ matrix.os == 'macos-15' && matrix.gt4py-module != 'cartesian' }}
+        if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module != 'cartesian') }}
         run: |
           gcc --version
           echo "CC=gcc" >> $GITHUB_ENV
@@ -107,7 +108,7 @@ jobs:
         run: echo "day_of_week=$(date +'%u')" >> $GITHUB_OUTPUT
 
       - name: Weekly notification
-        if: ${{ env.DAY_OF_WEEK == 1 }}
+        if: ${{ (env.DAY_OF_WEEK == 1) && (github.event_name == 'schedule') }}
         env:
           DAY_OF_WEEK: ${{ steps.get_day_of_the_week.outputs.day_of_week }}
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
