--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -51,19 +51,21 @@ jobs:
           cache-dependency-glob: "uv.lock"
           python-version: ${{ matrix.python-version }}
 
-      - name: Install gcc for macos
-        if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module == 'cartesian') }}
-        run: |
-          brew install gcc@14
-          gcc-14 --version
-          echo "CC=gcc-14" >> $GITHUB_ENV
-          echo "CXX=g++-14" >> $GITHUB_ENV
-
       - name: Install latest-stable xcode for macos
         if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module != 'cartesian') }}
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest-stable
+
+      - name: Install gcc for macos
+        if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module == 'cartesian') }}
+        # Use 'brew reinstall' to make sure that gcc is built against the xcode SDK selected in previous step
+        run: |
+          brew reinstall gcc@14
+          gcc-14 --version
+          which gcc-14
+          echo "CC=gcc-14" >> $GITHUB_ENV
+          echo "CXX=g++-14" >> $GITHUB_ENV
 
       - name: Install libomp for macos
         if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module != 'cartesian') }}
