--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -52,22 +52,21 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install latest-stable xcode for macos
-        if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module != 'cartesian') }}
+        if: ${{ matrix.os == 'macos-15' }}
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest-stable
 
-      - name: Install gcc for macos
+      - name: Install gcc (with OpenMP) for macos
         if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module == 'cartesian') }}
-        # Use 'brew reinstall' to make sure that gcc is built against the xcode SDK selected in previous step
         run: |
-          brew reinstall gcc@14
-          gcc-14 --version
-          which gcc-14
-          echo "CC=gcc-14" >> $GITHUB_ENV
-          echo "CXX=g++-14" >> $GITHUB_ENV
+          brew install gcc@14
+          $(brew --prefix gcc@14)/bin/gcc-14 --version
+          echo "CC=$(brew --prefix gcc@14)/bin/gcc-14" >> $GITHUB_ENV
+          echo "CXX=$(brew --prefix g++@14)/bin/g++-14" >> $GITHUB_ENV
+          echo "SDKROOT=$(xcrun --show-sdk-path)" >> $GITHUB_ENV
 
-      - name: Install libomp for macos
+      - name: Install libomp for macos clang
         if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module != 'cartesian') }}
         run: |
           gcc --version
