--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -61,9 +61,9 @@ jobs:
         if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module == 'cartesian') }}
         run: |
           brew install gcc@14
-          $(brew --prefix gcc@14)/bin/gcc-14 --version
-          echo "CC=$(brew --prefix gcc@14)/bin/gcc-14" >> $GITHUB_ENV
-          echo "CXX=$(brew --prefix g++@14)/bin/g++-14" >> $GITHUB_ENV
+          $(brew --prefix gcc)/bin/gcc-14 --version
+          echo "CC=$(brew --prefix gcc)/bin/gcc-14" >> $GITHUB_ENV
+          echo "CXX=$(brew --prefix g++)/bin/g++-14" >> $GITHUB_ENV
           echo "SDKROOT=$(xcrun --show-sdk-path)" >> $GITHUB_ENV
 
       - name: Install libomp for macos clang
