--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -36,7 +36,7 @@ jobs:
         gt4py-module: ["cartesian", "eve", "next", "storage"]
         # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
         #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
-        os: ["macos-15"]
+        os: ["ubuntu-latest", "macos-15"]
         python-version: ${{ fromJson(needs.get-python-versions.outputs.python-versions) }}
       fail-fast: false
 
